--- a/rmi-server/rmi-service/pom.xml
+++ b/rmi-server/rmi-service/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>rmi-service</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.autoai</groupId>
+            <artifactId>rmi-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
